[gd_scene load_steps=25 format=2]

[ext_resource path="res://Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://Assets/Player/Ninja/dash.png" type="Texture" id=2]
[ext_resource path="res://Assets/Player/Ninja/slide.png" type="Texture" id=3]
[ext_resource path="res://Assets/Player/Ninja/jump_down.png" type="Texture" id=4]
[ext_resource path="res://Assets/Player/Ninja/jump.png" type="Texture" id=5]
[ext_resource path="res://Assets/Player/Ninja/Cyber_Anim_00000.png" type="Texture" id=6]
[ext_resource path="res://Assets/Player/Ninja/Cyber_Anim_00001.png" type="Texture" id=7]
[ext_resource path="res://Assets/Player/Ninja/Cyber_Anim_00002.png" type="Texture" id=8]
[ext_resource path="res://Assets/Player/Ninja/Cyber_Anim_00003.png" type="Texture" id=9]
[ext_resource path="res://Assets/Player/Ninja/Cyber_Anim_00004.png" type="Texture" id=10]
[ext_resource path="res://Assets/Player/Ninja/Cyber_Anim_00005.png" type="Texture" id=11]
[ext_resource path="res://Assets/Player/Ninja/Cyber_Anim_00006.png" type="Texture" id=12]
[ext_resource path="res://Assets/Player/Ninja/Cyber_Anim_00007.png" type="Texture" id=13]
[ext_resource path="res://Assets/Player/Ninja/Cyber_Anim_00008.png" type="Texture" id=14]
[ext_resource path="res://Assets/Player/Ninja/Cyber_Anim_00009.png" type="Texture" id=15]
[ext_resource path="res://Assets/Player/Ninja/Cyber_Anim_00010.png" type="Texture" id=16]
[ext_resource path="res://Assets/Player/Ninja/Cyber_Anim_00011.png" type="Texture" id=17]
[ext_resource path="res://Assets/Player/Ninja/Cyber_Anim_00012.png" type="Texture" id=18]
[ext_resource path="res://Assets/Player/Ninja/Cyber_Anim_00013.png" type="Texture" id=19]
[ext_resource path="res://Assets/Player/Ninja/Cyber_Anim_00014.png" type="Texture" id=20]
[ext_resource path="res://Assets/Player/Ninja/Cyber_Anim_00015.png" type="Texture" id=21]
[ext_resource path="res://Assets/Player/Ninja/Cyber_Anim_00016.png" type="Texture" id=22]
[ext_resource path="res://Assets/Player/Ninja/Cyber_Anim_00017.png" type="Texture" id=23]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "ninjaDash",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "ninjaSlide",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "ninjaFall",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "ninjaJump",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ) ],
"loop": true,
"name": "ninjaRun",
"speed": 30.0
} ]

[node name="Player" type="KinematicBody2D" index="0"]

position = Vector2( 0, -0.0625 )
scale = Vector2( 0.8, 0.8 )
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Pause", "Transform" ]
__meta__ = {
"_edit_group_": true
}
swipe_angle_const = 0.75
swipe_distance = 50
on_air_time = 100
slide_distance = 140
dash_distance = 130
player_velocity = 150
dash_velocity = 450
JUMP_SPEED = -350
state = null
swipe = null

[node name="runCollision" type="CollisionPolygon2D" parent="." index="0"]

visible = false
position = Vector2( 0, 4 )
build_mode = 0
polygon = PoolVector2Array( 2.92188, -33.5312, -0.984373, -25.0156, -10.8281, -17.9844, -22, -8.29687, -14.8906, 1.23437, -24.5781, -2.75, -34.8125, 1.54687, -32.3125, 10.0625, -28.0937, 20.4531, -21.1406, 27.875, -17.7031, 26, -15.8281, 29.0469, -8.64062, 32.4062, -0.437498, 33.9687, 9.32813, 33.4219, 16.125, 28.7344, 22.9219, 25.1406, 28.625, 18.0312, 30.8906, 14.9062, 22.5312, 17.1719, 9.5625, -0.953125, 14.1719, 1.85937, 20.2656, -2.4375, 21.6719, -15.4062, 20.5781, -19.7031, 19.875, -22.0469, 17.8438, -25.1719, 9.79688, -17.0469, 12.5313, -26.2656, 7.60938, -32.0469 )

[node name="slideCollision" type="CollisionPolygon2D" parent="." index="1"]

visible = false
position = Vector2( 0.2875, 17.2 )
scale = Vector2( 2.32225, 2.65724 )
build_mode = 0
polygon = PoolVector2Array( -11.0574, -1.12194, -14.4216, -2.97419, -13.7151, -4.17962, -9.64447, -2.53317, -7.35682, -3.17999, -7.45775, -6.73749, -5.94386, -7.44311, -4.16084, -6.35528, -3.92534, -3.97381, -1.87318, -3.4446, 5.42712, -4.94404, 4.21601, -3.70921, -1.60405, -1.68055, 0.515395, 1.37713, 6.33545, 1.67114, 11.3817, 4.78763, 14.275, 3.55279, 11.92, 7.81591, -8.60157, 7.4631, -0.964851, 4.52302, -3.21886, 2.72957, -3.05065, 1.87695, -6.78491, -0.769126 )
_sections_unfolded = [ "Transform" ]

[node name="dashCollision" type="CollisionPolygon2D" parent="." index="2"]

visible = false
scale = Vector2( 0.15, 0.15 )
build_mode = 0
polygon = PoolVector2Array( -75.7812, 31.5625, -77.7604, 13.9583, -7.5, -48.6458, 48.4896, -52.0312, 70.8854, -50.7292, 96.1458, -93.125, 119.583, -88.9583, 130, -69.4271, 121.667, -40.5208, 98.4896, -20.4687, 133.906, 1.66667, 147.865, -16.4062, 166.719, -17.6042, 172.344, 0.260425, 141.198, 28.2292, 91.4583, 16.5104, 21.6667, 68.3333, 78.3333, 119.323, 26.25, 212.656, 64.2708, 232.188, 63.75, 239.219, -5.52083, 235.312, 34.8438, 120.99, -19.8437, 104.063, -32.6042, 152.24, -118.802, 205.99, -110.676, 239.38, -116.198, 246.354, -156.562, 207.031, -68.3333, 131.042, -44.6875, 26.4583 )

[node name="fallCollision" type="CollisionPolygon2D" parent="." index="3"]

visible = false
scale = Vector2( 0.15, 0.15 )
build_mode = 0
polygon = PoolVector2Array( -6.30209, -223.177, -23.4896, -207.552, -49.4271, -131.927, -77.7604, -83.8021, -86.3542, -11.6667, -102.5, 6.30209, -109.531, 27.7083, -80.3646, 59.4792, -38.9583, 82.9167, -108.75, 124.844, -119.948, 139.427, -61.6146, 171.458, -56.9271, 167.552, -81.4062, 136.042, -2.23958, 105.833, 7.13542, 150.365, 0.885423, 179.271, 68.0729, 183.958, 69.375, 177.448, 29.7917, 152.5, 31.4062, 43.0208, -39.6875, 19.8438, -5.26042, -68.5937, 30.9375, -109.896, 40.0521, -163.021, 53.3333, -196.094, 33.0208, -204.688, 8.54166, -143.229, -2.91667, -156.25, -19.0625, -161.198, 6.19791, -212.5 )

[node name="jumpCollision" type="CollisionPolygon2D" parent="." index="4"]

visible = false
scale = Vector2( 0.15, 0.15 )
build_mode = 0
polygon = PoolVector2Array( 33.4375, -174.375, 23.0208, -170.521, 16.25, -159.792, 6.35417, -116.042, -61.875, -101.458, -123.333, -26.4583, -112.396, -10.3125, -48.8542, -81.3542, -23.8542, -79.7917, -72.8125, 95.4167, -174.896, 117.083, -214.479, 185.312, -14.4792, 112.812, 22.4123, 147.186, 26.9271, 140.417, 9.73959, 99.2708, 87.6042, 40.6771, 87.8646, 12.0312, 18.0729, 1.61458, 49.4792, -70.5208, 84.375, -67.6562, 174.844, -120.781, 165.99, -140.573, 78.75, -92.3958, 38.3854, -99.9479, 57.3958, -116.562, 58.9583, -162.188, 47.7604, -170.521 )

[node name="PlayerSprite" type="AnimatedSprite" parent="." index="5"]

scale = Vector2( 0.15, 0.15 )
frames = SubResource( 1 )
animation = "ninjaSlide"
_sections_unfolded = [ "Transform" ]


